==> zerosensei/zephyr/drivers/gpio/gpio_ch32.c <==
#define DT_DRV_COMPAT wch_ch32_gpio
#include <drivers/gpio.h>
#include <drivers/clock_control/ch32_clock_control.h>
#include <dt-bindings/gpio/gpio.h>
#include <dt-bindings/pinctrl/ch32-pinctrl.h>
#include "gpio_utils.h"
#include <drivers/gpio/gpio_ch32.h>
#include <ch32v30x.h>

static void gpio_ch32_isr(int line, void *arg)
{
	struct gpio_ch32_data *data = arg;

	gpio_fire_callbacks(&data->cb, data->dev, BIT(line));
}

static int gpio_ch32_flags_to_conf(int flags, int *pincfg)
{

	if(flags & GPIO_OUTPUT) {
		/* Output only or Output/Input */

		if(flags & GPIO_SINGLE_ENDED) {
			if (flags & GPIO_LINE_OPEN_DRAIN) {
				*pincfg = GPIO_Mode_Out_OD;
			} else  {
				/* Output can't be open source */
				return -ENOTSUP;
			}
		} else {
			*pincfg = GPIO_Mode_Out_PP;
		}

		if(flags & GPIO_PULL_UP || flags & GPIO_PULL_DOWN){
			return -ENOTSUP;
		}

	} else if(flags & GPIO_INPUT) {
		/* Input */

		if ((flags & GPIO_PULL_UP) != 0) {
			*pincfg = GPIO_Mode_IPU;
		} else if ((flags & GPIO_PULL_DOWN) != 0) {
			*pincfg = GPIO_Mode_IPD;
		} else {
			*pincfg = GPIO_Mode_IN_FLOATING;
		}
	} else {
		/* Deactivated: Analog */
		*pincfg = GPIO_Mode_AIN;
	}

	return 0;
}

static int gpio_ch32_port_get_raw(const struct device *dev, uint32_t *value)
{
	const struct gpio_ch32_cfg *cfg = dev->config;
	GPIO_TypeDef *gpio = (GPIO_TypeDef *)cfg->base;

	*value = (uint32_t)GPIO_ReadInputData(gpio);

	return 0;
}

static int gpio_ch32_port_set_masked_raw(const struct device *dev,
					  gpio_port_pins_t mask,
					  gpio_port_value_t value)
{
	const struct gpio_ch32_cfg *cfg = dev->config;
	GPIO_TypeDef *gpio = (GPIO_TypeDef *)cfg->base;
	uint32_t port_value;

	port_value = GPIO_ReadOutputData(gpio);
	GPIO_Write(gpio, (port_value & ~mask) | (mask & value));

	return 0;
}

static int gpio_ch32_port_set_bits_raw(const struct device *dev,
					gpio_port_pins_t pins)
{
	const struct gpio_ch32_cfg *cfg = dev->config;
	GPIO_TypeDef *gpio = (GPIO_TypeDef *)cfg->base;

	GPIO_SetBits(gpio, pins);

	return 0;
}

static int gpio_ch32_port_clear_bits_raw(const struct device *dev,
					  gpio_port_pins_t pins)
{
	const struct gpio_ch32_cfg *cfg = dev->config;
	GPIO_TypeDef *gpio = (GPIO_TypeDef *)cfg->base;

	GPIO_ResetBits(gpio, pins);

	return 0;
}

static int gpio_ch32_port_toggle_bits(const struct device *dev,
				       gpio_port_pins_t pins)
{
	const struct gpio_ch32_cfg *cfg = dev->config;
	GPIO_TypeDef *gpio = (GPIO_TypeDef *)cfg->base;
	uint32_t value;

	value = (uint32_t)GPIO_ReadOutputData(gpio);
	GPIO_Write(gpio, value ^ pins);

	return 0;
}

int gpio_ch32_configure(const struct device *dev, int pin, int conf, int func)
{

	pincfg = conf;
	ping2 = pin;
	function = func;

	const struct gpio_ch32_cfg *cfg = dev->config;

	switch (cfg->pclken.bus) {
	case CH32_CLOCK_BUS_AHB:
		RCC_AHBPeriphClockCmd(cfg->pclken.enr, 1);
		break;

	case CH32_CLOCK_BUS_APB1:
		RCC_APB1PeriphClockCmd(cfg->pclken.enr, 1);
		break;

	case CH32_CLOCK_BUS_APB2:
		RCC_APB2PeriphClockCmd(cfg->pclken.enr, 1);
		break;

	default:
		return -ENOTSUP;
	}

	gpio_ch32_configure_raw(dev, pin, conf, func);

	if (func == CH32_GPIO) {
		uint32_t gpio_out = conf & (CH32_ODR_MASK << CH32_ODR_SHIFT);

		if (gpio_out == CH32_ODR_1) {
			gpio_ch32_port_set_bits_raw(dev, BIT(pin));
		} else if (gpio_out == CH32_ODR_0) {
			gpio_ch32_port_clear_bits_raw(dev, BIT(pin));
		}
	}

	return 0;
}

static int gpio_ch32_init(const struct device *dev)
{
	int ret;
	struct gpio_ch32_data *data = dev->data;
	const struct gpio_ch32_cfg *cfg = dev->config;

	data->dev = dev;

	const struct device *clk = DEVICE_DT_GET(CH32_CLOCK_CONTROL_NODE);

	ret = clock_control_on(clk,
				(clock_control_subsys_t *)&cfg->pclken);

	return ret;

}
